kuber/Deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: therapist-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: therapist
  template:
    metadata:
      labels:
        app: therapist
    spec:
      containers:
      - name: therapist-container
        image: lehaiuganov13/therapist:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
