kuber/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: therapist-serv
spec:
  type: NodePort
  selector:
    app: therapist
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
