kuber/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: therapist-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/aleksey/
        pathType: Prefix
        backend:
          service:
            name: therapist-service
            port:
              number: 8000
      - path: /otusapp/aleksey/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: therapist-service
            port:
              number: 8000
